# spor16legacy

./: add-card-to-database  add-card-to-database~  card-database  card-database.bak  checkcard.pl  checkcard.pl.bak  door_daemon.pl  getcard.pl  ledon  ledstats_0.3.1-5.dsc  libparportled_0.5.1-6.dsc
ledstats-0.3.1/: DEADJOE  Makefile  Makefile.in  README  config.cache  config.status  configure  configure.in  core  ledcpu.c  ledstats
ledstats-0.3.1/CVS/: Entries  Repository  Root
ledstats-0.3.1/debian/: changelog  control  copyright  init.d  rules
libparportled-0.5.1/: a.out  configure  core  ledlib.c  ledoff  ledoff.c  ledon.c
libparportled-0.5.1/debian/: changelog  control  copyright  libparportled-dev.docs  libparportled-dev.examples  rules
